Update Hadoop_Component_Based.md